# wagtail-pagetranslation

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml  testmanage.py  tox.ini
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: test.yml
src/wagtail_pagetranslation/: __init__.py  apps.py  translation.py  wagtail_hooks.py
tests/: conftest.py  test_models.py  test_translation.py
tests/testapp/: __init__.py  apps.py  settings.py
tests/testapp/templates/testapp/: blog_page.html
wagtail_pagetranslation/: apps.py  settings.py
wagtail_pagetranslation/templates/: translations_inline_panel.html  translations_inline_panel_child.html
wagtail_pagetranslation/test/: __init__.py  apps.py  models.py  settings.py
wagtail_pagetranslation/test/migrations/: 0001_initial.py
